# internal/registry/api/router/v0.go
@@ -72,14 +72,15 @@ func RegisterRoutes(
 	v0servers.RegisterServersEndpoints(api, pathPrefix, svcs.Server, svcs.Deployment)
 	v0servers.RegisterServersCreateEndpoint(api, pathPrefix, svcs.Server, svcs.Deployment)
 	v0servers.RegisterServersApplyEndpoint(api, pathPrefix, svcs.Server, svcs.Deployment)
+	v0servers.RegisterServersDeploymentApplyEndpoint(api, pathPrefix, svcs.Deployment)
 	v0servers.RegisterEditEndpoints(api, pathPrefix, svcs.Server, svcs.Deployment)
 	v0auth.RegisterAuthEndpoints(api, pathPrefix, cfg)
 	v0providers.RegisterProvidersEndpoints(api, pathPrefix, svcs.Provider)
 	v0deployments.RegisterDeploymentsEndpoints(api, pathPrefix, svcs.Deployment)
-	v0deployments.RegisterDeploymentApplyEndpoint(api, pathPrefix, svcs.Deployment)
 	v0agents.RegisterAgentsEndpoints(api, pathPrefix, svcs.Agent, svcs.Deployment)
 	v0agents.RegisterAgentsCreateEndpoint(api, pathPrefix, svcs.Agent, svcs.Deployment)
 	v0agents.RegisterAgentsApplyEndpoint(api, pathPrefix, svcs.Agent, svcs.Deployment)
+	v0agents.RegisterAgentsDeploymentApplyEndpoint(api, pathPrefix, svcs.Deployment)
 	v0skills.RegisterSkillsEndpoints(api, pathPrefix, svcs.Skill)
 	v0skills.RegisterSkillsCreateEndpoint(api, pathPrefix, svcs.Skill)
 	v0skills.RegisterSkillsApplyEndpoint(api, pathPrefix, svcs.Skill)
